# Pali

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  bench.py  bench.txt  build.sh  compile_commands.json  debug
net/: bobacat.net
src/: Main.cpp  Perft.cpp  Perft.h  UCI.cpp  UCI.h  Util.cpp  Util.h
src/Core/: Attacks.cpp  Attacks.h  BasicTypes.h  Bitboard.h  Movegen.cpp  Moves.h  Position.cpp  Position.h  Zobrist.h
src/Search/: HashTable.h  Movepick.cpp  Movepick.h  SEE.h  Search.cpp  Search.h
src/Search/NNUE/: Network.cpp  Network.h
src/core/: Attacks.cpp  Attacks.h  Bitboard.h  Color.h  Magic.h  Move.h  Piece.h  Position.cpp  Position.h  Square.h  Util.h  Zobrist.cpp  Zobrist.h
src/nnue/: Network.cpp  Network.h
src/resources/: jigglypuff.nnue
src/search/: Deepening.cpp  History.h  LogTable.cpp  LogTable.h  MovePicker.cpp  MovePicker.h  Negamax.cpp  QSearch.cpp  SEE.h  SearchThread.h  TTable.h
src/uci/: Commands.cpp  Commands.h  Perft.cpp  Perft.h
